# SecuServe-Liveness-Module

./: .gitignore  README.md  dev.sh  pyproject.toml
SecuServe-Livenes-Module/: __main__.py
SecuServe-Livenes-Module/pipeline/: LiveDetection.py  livenessModel.py  pipelineStates.py  state.py  videoStreamSubscriber.py
SecuServe-Livenes-Module/realtime/: README.md
SecuServe-Livenes-Module/utils/: consoleLog.py  const.py  pose.py
